<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvMediaStoreTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="12sp" />

    <Button
        android:id="@+id/insertBitmapToPictures"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_ando_file_store_bitmap"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/queryFileByDisplayName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_ando_file_query_picture"
        android:textAllCaps="false" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_ando_file_show_picture"
        android:textAllCaps="false" />

    <ImageView
        android:id="@+id/imageIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_ando_file_load_thumbnail"
        android:textAllCaps="false" />

    <ImageView
        android:id="@+id/imageIv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/updateFileByMediaStoreBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_ando_file_modify_file"
        android:textAllCaps="false" />

    <ImageView
        android:id="@+id/imageIv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/deleteFileByUri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_ando_file_delete_file"
        android:textAllCaps="false" />


    <Button
        android:id="@+id/deleteFileAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_ando_file_delete_file_all"
        android:textAllCaps="false" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/color_divider_gray" />

    <Button
        android:id="@+id/queryFileByAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_ando_file_query_file"
        android:textAllCaps="false"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textStyle="bold"
        android:text="@string/str_ando_file_description"
        android:textSize="12sp" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMediaImages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="ifContentScrolls"
        android:scrollbars="vertical" />

</LinearLayout>