<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/bt_select_single"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_ando_file_select_multiple_get_info"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_12"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/str_ando_file_error_info"
            android:padding="3dp"
            android:textColor="@android:color/holo_red_dark"
            android:textColorHint="@color/color_font_black"
            android:textSize="@dimen/font_12"
            android:textStyle="bold"
            android:visibility="visible"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/str_ando_file_select_result"
            android:padding="3dp"
            android:textColor="@color/color_font_black"
            android:textColorHint="@color/color_font_black"
            android:textSize="@dimen/font_12"
            android:visibility="visible" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>