<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="always"
    android:paddingLeft="@dimen/dp_15"
    android:paddingRight="@dimen/dp_15">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/bt_file_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_ando_file_utils_get_uri"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_11" />

        <TextView
            android:id="@+id/tv_file_select_uri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_3"
            android:layout_marginBottom="@dimen/dp_3"
            android:textColor="@color/black"
            android:textSize="@dimen/font_12"
            android:visibility="gone"
            tools:text="xxx" />

        <TextView
            android:id="@+id/tv_file_utils3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_3"
            android:layout_marginBottom="@dimen/dp_3"
            android:textColor="@color/black"
            android:textSize="@dimen/font_12"
            android:visibility="gone"
            tools:text="xxx" />

        <TextView
            android:id="@+id/tv_file_utils4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_3"
            android:layout_marginBottom="@dimen/dp_3"
            android:textColor="@color/black"
            android:textSize="@dimen/font_12"
            android:visibility="gone"
            tools:text="xxx" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/dp_3"
            android:layout_marginBottom="@dimen/dp_3"
            android:background="@color/color_divider_gray" />

        <TextView
            android:id="@+id/tv_file_utils_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_3"
            android:layout_marginBottom="@dimen/dp_3"
            android:textColor="@color/color_main_theme_dark"
            android:textSize="@dimen/font_12"
            android:textStyle="bold"
            tools:text="xxx" />

        <TextView
            android:id="@+id/tv_file_utils1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_3"
            android:layout_marginBottom="@dimen/dp_3"
            android:textColor="@color/black"
            android:textSize="@dimen/font_12"
            tools:text="xxx" />

        <TextView
            android:id="@+id/tv_file_utils2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_3"
            android:layout_marginBottom="@dimen/dp_3"
            android:textColor="@color/black"
            android:textSize="@dimen/font_12"
            tools:text="xxx" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/dp_3"
            android:layout_marginBottom="@dimen/dp_3"
            android:background="@color/color_divider_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_ando_file_utils_show"
            android:textColor="@color/color_main_theme_dark"
            android:textSize="@dimen/font_12"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_file_utils_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/font_11"
            tools:text="@string/str_ando_file_info" />

        <Button
            android:id="@+id/bt_file_utils_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create temp.html"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_11" />

        <Button
            android:id="@+id/bt_file_utils_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Open temp.html"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_11" />

        <Button
            android:id="@+id/bt_file_utils_write"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_ando_file_utils_write_data"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_11" />

        <Button
            android:id="@+id/bt_file_utils_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_ando_file_utils_read_data"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_11" />

        <TextView
            android:id="@+id/tv_file_utils_read_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/font_11"
            android:visibility="gone"
            tools:text="xxx" />

        <Button
            android:id="@+id/bt_file_utils_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_ando_file_utils_copy"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_11" />

        <TextView
            android:id="@+id/tv_file_utils_copy_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/font_11"
            android:visibility="gone"
            tools:text="xxx" />


        <Button
            android:id="@+id/bt_file_utils_copy_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_ando_file_utils_copy_open"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_11" />

        <Button
            android:id="@+id/bt_file_utils_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delete temp.html"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_11" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>